# airport-simulator

./: .gitignore  README.md
cpp-solution/: CMakeLists.txt
cpp-solution/include/: Airplane.hpp  AirplaneState.hpp  Airport.hpp
cpp-solution/src/: Airplane.cpp  Airport.cpp
cpp-solution/test/: CMakeLists.txt  CMakeLists.txt.in  run-build.sh
cpp-solution/test/src/: AirplaneFuelConsumptionTest.hpp  AirplaneStateTest.hpp  AirplaneTest.hpp  AirportTest.hpp  HelloTest.hpp  main_test.cpp  mock_Airplane.hpp  mock_Airport.hpp
doc/: class.puml  seq-controller.puml  state-airplane.puml
